# pulldog

./: .clang-format  CMakeLists.txt  README.md  main.cpp  setup.iss
.scripts/: package.ps1
assets/: resources.qrc
assets/styles/: dark.qss  light.qss
common/copier/: copier.cpp  copier.hpp  icopier.cpp  icopier.hpp
common/copier/win/: copier.cpp  copier.hpp
common/copier/windows/: copier.cpp  copier.hpp
common/locker/: ilocker.cpp  ilocker.hpp  locker.cpp  locker.hpp
common/locker/win/: locker.cpp  locker.hpp
common/locker/windows/: locker.cpp  lockerimpl.cpp  lockerimpl.hpp
common/watch/: iwatch.cpp  iwatch.hpp  watch.cpp  watch.hpp
common/watch/generic/: dirwatch.cpp  dirwatch.hpp  watch.cpp  watch.hpp
common/watch/win/: watch.cpp  watch.hpp
common/watch/windows/: watch.cpp  watch.hpp  watchimpl.cpp  watchimpl.hpp
common/watcher/: watcher.cpp  watcher.hpp
common/worker/: worker.cpp  worker.hpp
conf/: APPUUID
config/: config.hpp.in
constants/: constants.cpp  constants.hpp
controller/: controller.cpp  controller.hpp
models/transfer/: transfer.cpp  transfer.hpp
store/: storage.cpp  storage.hpp
types/fileid/: fileid.cpp  fileid.hpp
types/fileinfo/: fileinfo.cpp  fileinfo.hpp
types/lockmode/: lockmode.hpp
ui/gui/components/failedtile/: failedtile.cpp  failedtile.hpp
ui/gui/components/folderlist/: folderlist.cpp  folderlist.hpp
ui/gui/components/foldertile/: foldertile.cpp  foldertile.hpp
ui/gui/components/pathpick/: pathpick.cpp  pathpick.hpp
ui/gui/components/progress/: progress.cpp  progress.hpp
ui/gui/components/titlebar/: titlebar.cpp  titlebar.hpp
ui/gui/components/watchlist/: watchlist.cpp  watchlist.hpp
ui/gui/screens/failedinfo/: failedinfo.cpp  failedinfo.hpp
ui/gui/screens/pullinfo/: pullinfo.cpp  pullinfo.hpp
ui/gui/screens/settings/: settings.cpp  settings.hpp
ui/gui/window/pulldog/: pulldog.cpp  pulldog.hpp
utility/deferred/: deferred.cpp  deferred.hpp
utility/functions/: functions.cpp  functions.hpp
utility/logging/: logging.cpp  logginh.hpp
